--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -372,6 +372,15 @@
   Url                      = {http://dx.doi.org/10.1002/1098-111X(200103)16:3<391::AID-INT1014>3.0.CO;2-2}
 }
 
+@InCollection{haarslev2001racer,
+  Title                    = {{RACER system description}},
+  Author                   = {Haarslev, Volker and M{\"u}ller, Ralf},
+  Booktitle                = {Automated Reasoning},
+  Publisher                = {Springer},
+  Year                     = {2001},
+  Pages                    = {701--705}
+}
+
 @InProceedings{Hillmann2007,
   Title                    = {Application Profiles: Exposing and Enforcing Metadata Quality},
   Author                   = {Hillmann, Diane I. and Phipps, Jon},
@@ -389,6 +398,22 @@
   Owner                    = {Thomas},
   Timestamp                = {2014.05.04},
   Url                      = {http://dl.acm.org/citation.cfm?id=1344591.1344601}
+}
+
+@InProceedings{horrocks2012hermit,
+  Title                    = {{The HermiT OWL Reasoner}},
+  Author                   = {Horrocks, Ian and Motik, Boris and Wang, Zhe},
+  Booktitle                = {Proceedings of the 1st International Workshop on OWL Reasoner Evaluation (ORE-2012), Manchester, UK},
+  Year                     = {2012}
+}
+
+@InProceedings{kontchakov2011combined,
+  Title                    = {{The combined approach to ontology-based data access}},
+  Author                   = {Kontchakov, Rinnan and Lutz, Carsten and Toman, David and Wolter, Frank and Zakharyaschev, Michael},
+  Booktitle                = {Proceedings of the Twenty-Second international joint conference on Artificial Intelligence-Volume Volume Three},
+  Year                     = {2011},
+  Pages                    = {2656--2661},
+  Publisher                = {AAAI Press}
 }
 
 @InProceedings{Kontokostas2014,
@@ -473,6 +498,24 @@
 
   Bibsource                = {DBLP, http://dblp.uni-trier.de},
   Ee                       = {http://ceur-ws.org/Vol-426/swap2008_submission_47.pdf}
+}
+
+@InCollection{nolle2014efficient,
+  Title                    = {Efficient Federated Debugging of Lightweight Ontologies},
+  Author                   = {Nolle, Andreas and Meilicke, Christian and Stuckenschmidt, Heiner and Nemirovski, German},
+  Booktitle                = {Web Reasoning and Rule Systems},
+  Publisher                = {Springer International Publishing},
+  Year                     = {2014},
+  Pages                    = {206--215}
+}
+
+@InProceedings{nolle2013elite,
+  Title                    = {ELITE: An Entailment-based Federated Query Engine for Complete and Transparent Semantic Data Integration},
+  Author                   = {Nolle, Andreas and Nemirovski, German},
+  Booktitle                = {Proceedings of the 26th International Workshop on Description Logics},
+  Year                     = {2013},
+  Pages                    = {854--867},
+  Publisher                = {CEUR Electronic Workshop Proceedings}
 }
 
 @Article{Perez2009,
@@ -560,14 +603,35 @@
   Timestamp                = {2014.11.07}
 }
 
-@InProceedings{Sirin2009,
-  Title                    = {Towards integrity constraints},
+@Article{sirin2007pellet,
+  Title                    = {{Pellet: A practical owl-dl reasoner}},
+  Author                   = {Sirin, Evren and Parsia, Bijan and Grau, Bernardo Cuenca and Kalyanpur, Aditya and Katz, Yarden},
+  Journal                  = {Web Semantics: science, services and agents on the World Wide Web},
+  Year                     = {2007},
+  Number                   = {2},
+  Pages                    = {51--53},
+  Volume                   = {5},
+
+  Publisher                = {Elsevier}
+}
+
+@InProceedings{SirinTao2009,
+  Title                    = {Towards Integrity Constraints in OWL},
   Author                   = {E. Sirin and J. Tao},
   Booktitle                = {{Proceedings of the Workshop on OWL: Experiences and Directions, OWLED 2009}},
   Year                     = {2009},
 
   Owner                    = {Thomas},
   Timestamp                = {2014.05.01}
+}
+
+@InCollection{tsarkov2006fact++,
+  Title                    = {{FaCT++ description logic reasoner: System description}},
+  Author                   = {Tsarkov, Dmitry and Horrocks, Ian},
+  Booktitle                = {Automated reasoning},
+  Publisher                = {Springer},
+  Year                     = {2006},
+  Pages                    = {292--297}
 }
 
 @Article{VomprasGregoryBoschWackerow2014,
@@ -593,59 +657,3 @@
   Timestamp                = {2014.11.08}
 }
 
-@incollection{tsarkov2006fact++,
-  title={{FaCT++ description logic reasoner: System description}},
-  author={Tsarkov, Dmitry and Horrocks, Ian},
-  booktitle={Automated reasoning},
-  pages={292--297},
-  year={2006},
-  publisher={Springer}
-}
-@article{sirin2007pellet,
-  title={{Pellet: A practical owl-dl reasoner}},
-  author={Sirin, Evren and Parsia, Bijan and Grau, Bernardo Cuenca and Kalyanpur, Aditya and Katz, Yarden},
-  journal={Web Semantics: science, services and agents on the World Wide Web},
-  volume={5},
-  number={2},
-  pages={51--53},
-  year={2007},
-  publisher={Elsevier}
-}
-@incollection{haarslev2001racer,
-  title={{RACER system description}},
-  author={Haarslev, Volker and M{\"u}ller, Ralf},
-  booktitle={Automated Reasoning},
-  pages={701--705},
-  year={2001},
-  publisher={Springer}
-}
-@inproceedings{horrocks2012hermit,
-  title={{The HermiT OWL Reasoner}},
-  author={Horrocks, Ian and Motik, Boris and Wang, Zhe},
-  booktitle={Proceedings of the 1st International Workshop on OWL Reasoner Evaluation (ORE-2012), Manchester, UK},
-  year={2012}
-}
-@inproceedings{kontchakov2011combined,
-  title={{The combined approach to ontology-based data access}},
-  author={Kontchakov, Rinnan and Lutz, Carsten and Toman, David and Wolter, Frank and Zakharyaschev, Michael},
-  booktitle={Proceedings of the Twenty-Second international joint conference on Artificial Intelligence-Volume Volume Three},
-  pages={2656--2661},
-  year={2011},
-  publisher={AAAI Press}
-}
-@incollection{nolle2014efficient,
-  title={Efficient Federated Debugging of Lightweight Ontologies},
-  author={Nolle, Andreas and Meilicke, Christian and Stuckenschmidt, Heiner and Nemirovski, German},
-  booktitle={Web Reasoning and Rule Systems},
-  pages={206--215},
-  year={2014},
-  publisher={Springer International Publishing}
-}
-@inproceedings{nolle2013elite,
-  title={ELITE: An Entailment-based Federated Query Engine for Complete and Transparent Semantic Data Integration},
-  author={Nolle, Andreas and Nemirovski, German},
-  booktitle={Proceedings of the 26th International Workshop on Description Logics},
-  pages={854--867},
-  year={2013},
-  publisher={CEUR Electronic Workshop Proceedings}
-}
